# air-watcher-demo

./: .env.example  .gitignore  docker-compose.yml
api/: .gitignore  Dockerfile  pyproject.toml
api/air_watcher_project/: manage.py
api/air_watcher_project/air_watcher_app/: admin.py  apps.py  models.py  scheduler.py  schema.py  types.py  urls.py
api/air_watcher_project/air_watcher_app/management/commands/: seed_watch_cities.py  update_filter_wear.py
api/air_watcher_project/air_watcher_app/migrations/: 0001_add_watch_city_model.py  0002_alter_watchcity_name.py  0003_add_watchcity_lat_lon.py
api/air_watcher_project/air_watcher_app/services/: openweather.py
api/air_watcher_project/air_watcher_app/tests/: test_commands.py  test_models.py  test_scheduler.py  test_schema.py  test_services.py
api/air_watcher_project/air_watcher_project/: asgi.py  settings.py  urls.py  wsgi.py
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: apollo-client.tsx  index.css  main.tsx  vite-env.d.ts
app/src/components/: CityDetails.tsx  WatchCityList.tsx
app/src/components/city-details/: CityDetails.tsx  CityDetailsContainer.tsx
app/src/components/common/: LoadingIndicator.test.tsx  LoadingIndicator.tsx
app/src/components/watch-city-list/: WatchCityList.test.tsx  WatchCityList.tsx  WatchCityListContainer.test.tsx  WatchCityListContainer.tsx  watch-list-operations.tsx  watch-list-types.tsx
app/src/services/: openweather_api.test.tsx  openweather_api.tsx
app/src/store/: store.ts
app/src/store/slices/: snackbarSlice.test.ts  snackbarSlice.ts
(+11 files in other folders)
