[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "strawberry-graphql-django>=0.73.1",
    "black>=24.0.0",
    "django-cors-headers>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py314']
